fixed broken links

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <br><br><br>
                 <div class="col-5">
                     <div class="half-width">
-                        <img width="100%" src="/assets/credit-card.png" alt="credit-card-image">
+                        <img width="100%" src="assets/credit-card.png" alt="credit-card-image">
                     </div>
                     <div class="half-width text-center">
                         <p class="approval-odds">Approval Odds <sup>&#10013;</sup></p>
