--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="container">
         <div class="header-box"></div>
         <ul class="nav">
-            <li class="nav-link"><span class="navigation-text">Navigation</span> Link One</li>
-            <li class="nav-link"><span class="navigation-text">Navigation</span> Link Two</li>
-            <li class="nav-link"><span class="navigation-text">Navigation</span> Link Three</li>
+            <li class="nav-link"><a href="#"><span class="navigation-text">Navigation</span> Link One</a></li>
+            <li class="nav-link"><a href="#"><span class="navigation-text">Navigation</span> Link Two</a></li>
+            <li class="nav-link"><a href="#"><span class="navigation-text">Navigation</span> Link Three</a></li>
         </ul>
         <div class="header-image">
             <div class="header-text-container">
@@ -76,7 +76,7 @@
                 <br><br><br>
                 <hr>
                 <br>
-                <a href="#">See Detail Rates and Fees</a>
+                <a class="a-link" href="#">See Detail Rates and Fees</a>
             </div>
         </div>
     </div>
